# python-git-ignore

./: .gitignore  README.md  appveyor.yml  changelog.md  setup.cfg  tox.ini
src/: git-ignore.py
src/dig_git_ignore/: __main__.py  constants.py  main.py  provider.py
src/dig_git_ignore/action/: common.py  find.py  list_all.py  update.py
