[metadata]
name = dig-git-ignore
version = 0.0.1
author = Gustavo de Oliveira Silva (DIG)
description = TODO
long_description = file:README.md
long_description_content_type = text/markdown
keywords = gitignore ignore
license = CC BY-ND 4.0
license_files = license.txt
url = https://github.com/DIG-/python-git-ignore
project_urls =
    Bug Tracker = https://github.com/DIG-/python-git-ignore/issues
classifiers =
    Topic :: Software Development :: Build Tools
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    git-ignore = dig_git_ignore.main:main